# cppfea

./: .gitignore  CMakeLists.txt  README.md
data/abaqus_c2d4_1/: F.csv  FEAData.csv  KFU.csv  K_a.csv  K_b.csv  U.csv  nodes.csv
data/abaqus_c2d4_1/data/: tn4.input  tn5.input
data/abaqus_c3d8_1/: abaqus.rpt  abaqus_all.rpt  abaqus_nodal.rpt  abaqus_nodes_c3d8.rpt  nodes.csv
data/abaqus_c3d8_2/: F.csv  FEAData.csv  KFU.csv  K_a.csv  K_b.csv  U.csv  abaqus_viga1r_c3d8.csv  abaqus_viga1r_c3d8.rpt  nodes.csv
data/abaqus_c3d8_3/: Book1.xlsx  KFU.csv  K_a.csv  K_b.csv  abaqus_viga1rr.rpt  nodes.csv  nodes_CG.csv
data/c3d6_1/: F.csv  FEAData.csv  KFU.csv  K_U_F.csv  K_a.csv  K_b.csv  U.csv  a.input  nodes.csv
data/c3d6_2/: F.csv  FEAData.csv  KFU.csv  K_a.csv  K_b.csv  U.csv  a copy.input  a.input  nodes.csv
data/c3d6_2/abaqus/: abaqus.rpt  job_c3d6.com  job_c3d6.inp  job_c3d6.odb  job_c3d6.prt
data/c3d6_3/: F.csv  FEAData.csv  KFU.csv  K_a.csv  K_b.csv  U.csv  a.input  nodes.csv
data/c3d6_3/abaqus/: job_c3d6.env  job_c3d6.odb_f
data/c3d6_4/: F.csv  FEAData.csv  KFU.csv  K_U_F.csv  K_a.csv  K_b.csv  U.csv  a.input  nodes.csv
data/c3d6_4/abaqus/: Job-1.com  Job-1.inp  Job-1.ipm  Job-1.msg  Job-1.odb  Job-1.prt  Job-1.sta  Job-1_STIF1.mtx  abaqus.rpt  c3d6_1.cae
data/data_basics/input_C3D6/: input_points.csv
data/data_basics/input_C3D6 copy/: input_displacements.csv  input_elements.csv
data/data_basics/output_C3D6/: vvU.csv
data/data_basics/output_C3D8/: vvK.csv  vvU.csv
data/data_test/input_C3D6/: input_points.csv
data/data_test_1/: Untitled 1.ods
data/data_test_1/input_C3D6/: input_points.csv
data/data_test_1/input_C3D8/: input_points.csv
data/data_test_2/: .~lock.Untitled 1.ods#  Untitled 1.ods
data/data_test_2/input_C3D6/: input_forces.csv  input_points.csv
data/data_test_single/output_C3D6/: vvK1.csv
data/meshmeld01/: F.txt  U.txt  nodes_k0.txt  nodes_k1.txt
data/simulation/: Untitled 1.ods
data/simulation/input_C3D6/: input_Dirichlet.csv  input_points.csv
data/simulation/input_C3D8/: input_elements.csv
data/simulation/output_C3D6/: vvK.csv
data/simulation/output_C3D8/: vvK1.csv
py/: a.py  b.py  c.py  f.txt  tn1.input  tn2.input  tn3.input  u.txt
src/: element_test.cpp  main.cpp  simulation.cpp  simulation_bkp.cpp  simulation_bkp_0.cpp
src/dataset/: CMakeLists.txt  dataset.cpp  dataset.hpp  simulation_models.cpp  test_models.cpp
src/fea/: CMakeLists.txt  fea.cpp  fea.hpp  fem.cpp  fem.hpp  pos.cpp  pos.hpp  solver.cpp  solver.hpp  vis_fem.cpp  vis_fem.hpp
src/fea/bcs/: boundary_conditions.cpp  boundary_conditions.hpp  boundary_conditions_2d.cpp  boundary_conditions_2d.hpp  boundary_conditions_3d.cpp  boundary_conditions_3d.hpp
src/fea/elts/: c2d4.cpp  c2d4.hpp  c3d6.cpp  c3d6.hpp  c3d8.cpp  c3d8.hpp  element.cpp  element.hpp  element2d.cpp  element2d.hpp  element3d.cpp  element3d.hpp
src/fea/loads/: loads.cpp  loads.hpp  loads_2d.cpp  loads_2d.hpp  loads_3d.cpp  loads_3d.hpp
src/nlo/: CMakeLists.txt  edge.hpp  levenberg_marquardt.cpp  levenberg_marquardt.hpp  node.hpp
src/vis/: CMakeLists.txt  pclviewer.cpp  pclviewer.h  vis.cpp  vis.hpp
